# overlearn

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  eslint.config.js  package.json  tsconfig.json
.claude-plugin/: marketplace.json
.github/workflows/: adapter-smoke.yml  agent-e2e.yml  ci.yml  release-artifacts.yml  release.yml
assets/tutorial/: dialogue-loop.md  feynman-checks.md  manifest.md  next-course.md  review-rail-glossary.md  topics-mastery.md
docs/: acp-mcp-passthrough.md  release.md
instructions/: demos.md  grading.md  pedagogy.md  protocol.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  stop-backstop.sh
registry/: README.md  package.json  tsconfig.json  wrangler.toml
registry/src/: bundle.ts  github.ts  html.ts  index.ts  install-script.ts  landing.ts  storage.ts  types.ts
registry/test/: integration.test.ts
scripts/: check-version-sync.ts  copy-tauri-sidecar.ts  embed-ui-assets.ts
src/: attachments.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/web/: index.html  main.js  styles.css
src/adapter/: acp.test.ts  acp.ts  index.ts  permissions.ts  registry.test.ts  registry.ts  types.ts
src/cli/: e2e.test.ts  index.ts  run.test.ts  run.ts
src/course/: index.test.ts  index.ts
src/daemon/: bridges.test.ts  bridges.ts  (+19 more)
tasks/: prd-emergent-learning-architecture.md  prd-tauri-frontend-migration.md
ui/: DESIGN.md  index.html  package.json  tsconfig.json  vite.config.ts
(+68 files in other folders)
