[package]
name = "overlearn-desktop"
version = "0.0.0"
description = "Overlearn desktop shell"
authors = ["Overseed AI"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
libc = "=0.2.186"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tauri = { version = "=2.10.1", features = ["tray-icon"] }
tauri-runtime = "=2.10.0"
tauri-runtime-wry = "=2.10.0"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-single-instance = "=2.4.2"
